# symgo

./: .buildinfo  .pre-commit-config.yaml  LICENSE  README.md  changelog.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: changelog.doctree  environment.pickle  index.doctree  install.doctree
.github/workflows/: publish-gh-pages.yml  python-package.yml  test.yml
_sources/: install.md
doc/: changelog.md  conf.py  index.md  install.md
src/symgo/: __init__.py  minimize.py  optimization.py  version.py
src/symgo/interface/: base.py  mattersim.py  pypolymlp.py
tests/: conftest.py  phonopy_cells.yaml  polymlp.yaml  relax_ref_phonopy.py  test_symgo_mattersim.py  test_symgo_pypolymlp.py
