[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symgo"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
description = "This is the symgo module."
authors = [
    { name = "Atsuto Seko", email = "seko@cms.mtl.kyoto-u.ac.jp" }
]
maintainers = [
    {name = "Atsushi Togo", email = "atztogo@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "symfc",
]
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/symfc/symgo"

[tool.setuptools.dynamic]
version = { attr = "symgo.version.__version__" }

[tool.ruff]
line-length = 88
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # pycodestyle-errors
    "D", # pydocstyle
]
extend-ignore = [
    "D417",
    "D100",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
